--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <title>V Games - Início</title>
+    <title>Bootstrap 4, from LayoutIt!</title>
 
     <meta name="description" content="Source code generated using layoutit.com">
     <meta name="author" content="LayoutIt!">
@@ -19,15 +19,16 @@
     <div class="container-fluid">
 	<div class="row">
 		<div class="col-md-12">
+			<img alt="Bootstrap Image Preview" src="https://www.layoutit.com/img/sports-q-c-140-140-3.jpg">
 			<h3 class="text-center text-primary">
-				V Games
+				h3. Lorem ipsum dolor sit amet.
 			</h3>
 			<ul class="nav nav-pills">
 				<li class="nav-item">
-					<a class="nav-link active" href="#">Início</a>
+					<a class="nav-link active" href="#">Home</a>
 				</li>
 				<li class="nav-item">
-					<a class="nav-link" href="#">Projetos</a>
+					<a class="nav-link" href="#">Profile</a>
 				</li>
 				<li class="nav-item">
 					<a class="nav-link disabled" href="#">Messages</a>
@@ -42,7 +43,10 @@
 				</li>
 			</ul> 
 			<button type="button" class="btn btn-lg btn-outline-primary btn-block active">
-				Baixe já MinePotato 3
+				Button
+			</button> 
+			<button type="button" class="btn btn-outline-secondary btn-lg btn-block">
+				Changelog 3.1
 			</button>
 		</div>
 	</div>
