--- a/index.html
+++ b/index.html
@@ -5,13 +5,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <title>Bootstrap 4, from LayoutIt!</title>
+    <title>V Games</title>
 
     <meta name="description" content="Source code generated using layoutit.com">
     <meta name="author" content="LayoutIt!">
 
     <link href="css/bootstrap.min.css" rel="stylesheet">
     <link href="css/style.css" rel="stylesheet">
+    <link rel="shortcut icon" href="https://avatars.githubusercontent.com/u/81641780?v=4"
 
   </head>
   <body>
@@ -19,35 +20,16 @@
     <div class="container-fluid">
 	<div class="row">
 		<div class="col-md-12">
-			<img alt="Bootstrap Image Preview" src="https://www.layoutit.com/img/sports-q-c-140-140-3.jpg">
+			<img alt="Bootstrap Image Preview" src="https://avatars.githubusercontent.com/u/81641780?v=4" height=128 width=128 class="rounded-circle">
 			<h3 class="text-center text-primary">
-				h3. Lorem ipsum dolor sit amet.
-			</h3>
-			<ul class="nav nav-pills">
-				<li class="nav-item">
-					<a class="nav-link active" href="#">Home</a>
-				</li>
-				<li class="nav-item">
-					<a class="nav-link" href="#">Profile</a>
-				</li>
-				<li class="nav-item">
-					<a class="nav-link disabled" href="#">Messages</a>
-				</li>
-				<li class="nav-item dropdown ml-md-auto">
-					 <a class="nav-link dropdown-toggle" href="http://example.com" id="navbarDropdownMenuLink" data-toggle="dropdown">Dropdown link</a>
-					<div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdownMenuLink">
-						 <a class="dropdown-item" href="#">Action</a> <a class="dropdown-item" href="#">Another action</a> <a class="dropdown-item" href="#">Something else here</a>
-						<div class="dropdown-divider">
-						</div> <a class="dropdown-item" href="#">Separated link</a>
-					</div>
-				</li>
-			</ul> 
-			<button type="button" class="btn btn-lg btn-outline-primary btn-block active">
-				Button
-			</button> 
-			<button type="button" class="btn btn-outline-secondary btn-lg btn-block">
+				V Games
+			</h3> 
+			<a href="https://github.com/VGamesBR/MinePotato3/releases/download/MinePotato3.1/MinePotato.3.1.zip"><button type="button" class="btn btn-lg btn-outline-primary btn-block active "  >
+				Download Minepotato 3.1
+			</button> <a/>
+			<a href="https://github.com/VGamesBR/MinePotato3/files/7614132/Changelog.3.1.txt"><button type="button" class="btn btn-outline-secondary btn-lg btn-block">
 				Changelog 3.1
-			</button>
+			</button><a/>
 		</div>
 	</div>
 </div>
