--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 
     <title>V Games</title>
 
-    <meta name="description" content="Source code generated using layoutit.com">
+    <meta name="description" content="MinePotato's 3 official website">
     <meta name="author" content="LayoutIt!">
 
     <link href="css/bootstrap.min.css" rel="stylesheet">
